# scldata

./: CHANGELOG.md  README.md  main.py  pyproject.toml
scldata/: __init__.py  loader.py
scldata/data/: entries.json  labels.json  splits.json
tests/: doc_tests.py  unit_tests.py
